removing duplicate align-items (fixing bugs)

--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -173,7 +173,6 @@ header {
   justify-content: space-between;
   align-items: center;
   height: 100%;
-  align-items: center;
 }
 
 .nav__menu-list {
